# searxng-docker-tavily-adapter

./: .env  .gitignore  AGENTS.md  AZURE_DEPLOYMENT.md  CHANGELOG_UV.md  CONFIG_SETUP.md  Caddyfile  DEVELOPERS_WIKI_DESCRIPTION.md  IMPLEMENTATION_SUMMARY.md  LOCAL_DEVELOPMENT.md  Makefile  NETWORKING_GUIDE.md  README.md  TESTING_RAW_CONTENT.md  UV_CHEATSHEET.md  config.azure.yaml  config.example.yaml  config.local.yaml  docker-compose.local.yaml  docker-compose.yaml  pyproject.toml  setup-local.ps1  setup-local.sh
.github/workflows/: azure-deploy.yml  docker-publish.yml
simple_tavily_adapter/: Dockerfile  __init__.py  cache.py  config_loader.py  entrypoint.sh  google_search_service.py  main.py  models.py  requirements.txt  routes.py  scraper_service.py  search_base.py  searx_search_service.py  searxng_client.py  service_base.py  services.py  tavily_client.py  test_client.py  utils.py
tests/: test_services.py
